--- a/swagger-spec/nodes/node_links_list.yaml
+++ b/swagger-spec/nodes/node_links_list.yaml
@@ -1,1 +1,175 @@
 # /nodes/{node_id}/node_links/
+get:
+  summary: List all node links
+  description: >-
+    List of all links (from a given node) to other nodes.
+
+    ####Returns
+    Returns a JSON object containing `data` and `links` keys.
+
+
+    The `data` key contains an array of up to 10 nodes.
+    Each resource in the array is a separate node object.
+
+
+    The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
+
+  parameters:
+    - in: path
+      name: node_id
+      type: string
+      required: true
+      description: 'The unique identifier of the node.'
+
+  tags:
+    - Nodes
+
+  operationId: nodes_node_links_list
+  x-response-schema: 'Node Link'
+  responses:
+    '200':
+      description: 'OK'
+      schema:
+        type: array
+        items:
+          $ref: 'definition.yaml'
+      examples:
+        application/json:
+          data:
+          - relationships:
+              target_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/nodes/gaz5n/node_links/58d288c1a170c50017124d71/
+            embeds:
+              target_node:
+                data:
+                  relationships:
+                    files:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/files/
+                          meta: {}
+                    view_only_links:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/view_only_links/
+                          meta: {}
+                    citation:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/citation/
+                          meta: {}
+                    draft_registrations:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/draft_registrations/
+                          meta: {}
+                    contributors:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/contributors/
+                          meta: {}
+                    forks:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/forks/
+                          meta: {}
+                    root:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/
+                          meta: {}
+                    identifiers:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/identifiers/
+                          meta: {}
+                    comments:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/comments/?filter%5Btarget%5D=6q49d
+                          meta: {}
+                    registrations:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/registrations/
+                          meta: {}
+                    node_links:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/node_links/
+                          meta: {}
+                    linked_nodes:
+                      links:
+                        self:
+                          href: http://api.osf.io/v2/nodes/6q49d/relationships/linked_nodes/
+                          meta: {}
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/linked_nodes/
+                          meta: {}
+                    wikis:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/wikis/
+                          meta: {}
+                    affiliated_institutions:
+                      links:
+                        self:
+                          href: http://api.osf.io/v2/nodes/6q49d/relationships/institutions/
+                          meta: {}
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/institutions/
+                          meta: {}
+                    children:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/children/
+                          meta: {}
+                    preprints:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/preprints/
+                          meta: {}
+                    logs:
+                      links:
+                        related:
+                          href: http://api.osf.io/v2/nodes/6q49d/logs/
+                          meta: {}
+                  links:
+                    self: http://api.osf.io/v2/nodes/6q49d/
+                    html: http://osf.io/6q49d/
+                  attributes:
+                    category: project
+                    fork: false
+                    preprint: false
+                    description: 'Awesome project 2 description'
+                    current_user_permissions:
+                    - read
+                    - write
+                    - admin
+                    date_modified: '2017-03-22T14:22:00.193773'
+                    title: 'Awesome project 2'
+                    collection: false
+                    registration: false
+                    date_created: '2017-03-22T14:22:00.193773'
+                    current_user_can_comment: true
+                    node_license:
+                    public: false
+                    tags: []
+                  type: nodes
+                  id: 6q49d
+            attributes: {}
+            type: node_links
+            id: 58d288c1a170c50017124d71
+          links:
+            first: null
+            last: null
+            prev: null
+            next: null
+            meta: null
+              total: 1
+              per_page: 10
