--- a/swagger-spec/nodes/view_only_links_list.yaml
+++ b/swagger-spec/nodes/view_only_links_list.yaml
@@ -1,1 +1,112 @@
 # /nodes/{node_id}/view_only_links/
+get:
+  summary: List all VOLs
+  description: >-
+    List of view only links on a node.
+
+    ####Returns
+
+    Returns a JSON object containing `data` and `links` keys.
+
+
+    The `data` key contains an array of up to 10 view only links.
+    Each resource in the array is a view only link object.
+
+
+    The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
+
+
+    ####Permissions
+
+
+    View only links on a node, public or private, are readable and writeable only by users that are administrators on the node.
+
+
+    ####Filtering
+
+
+    View Only Links can be filtered based on their `name`, `anonymous` and `date_created` fields.
+
+    + `filter[name]=<Str>` -- filter view only links by `name`
+
+    + `filter[anonymous]=<true|false>` -- filter view only links by `anonymous`
+
+    + `filter[date_created][comparison_operator]=YYYY-MM-DDTH:M:S` -- filter view only links based on `date_created`.
+
+
+    Possible comparison operators include 'gt' (greater than), 'gte'(greater than or equal to), 'lt' (less than) and 'lte' (less than or equal to). The date must be in the format YYYY-MM-DD and the time is optional.
+
+  parameters:
+    - in: path
+      type: string
+      name: node_id
+      required: true
+      description: 'The unique identifier of the node.'
+  tags:
+    - Nodes
+  operationId: nodes_view_only_links_list
+  x-response-schema: 'View Only Link'
+  responses:
+    '200':
+      description: OK
+      schema:
+        type: array
+        items:
+          $ref: '../view_only_links/definition.yaml'
+      examples:
+        application/json:
+          data:
+          - relationships:
+              nodes:
+                links:
+                  self:
+                    href: http://api.osf.io/v2/view_only_links/58d03846a170c50025baae61/relationships/nodes/
+                    meta: {}
+                  related:
+                    href: http://api.osf.io/v2/view_only_links/58d03846a170c50025baae61/nodes/
+                    meta: {}
+              creator:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/nodes/gaz5n/view_only_links/58d03846a170c50025baae61/
+            attributes:
+              date_created: '2017-03-20T20:15:02.488643'
+              anonymous: false
+              key: c1df490be3294a9bac01ff05c4097ab7
+              name: 'vol name'
+            type: view_only_links
+            id: 58d03846a170c50025baae61
+          - relationships:
+              nodes:
+                links:
+                  self:
+                    href: http://api.osf.io/v2/view_only_links/58d13827a170c50025baae6e/relationships/nodes/
+                    meta: {}
+                  related:
+                    href: http://api.osf.io/v2/view_only_links/58d13827a170c50025baae6e/nodes/
+                    meta: {}
+              creator:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/nodes/gaz5n/view_only_links/58d13827a170c50025baae6e/
+            attributes:
+              date_created: '2017-03-21T14:26:47.507504'
+              anonymous: false
+              key: 9794ac36085e4d7086ff4dab49daf1cb
+              name: 'vol name'
+            type: view_only_links
+            id: 58d13827a170c50025baae6e
+          links:
+            first: null
+            last: null
+            prev: null
+            next: null
+            meta: null
+              total: 2
+              per_page: 10
