--- a/swagger-spec/nodes/logs_list.yaml
+++ b/swagger-spec/nodes/logs_list.yaml
@@ -1,1 +1,310 @@
 # /nodes/{node_id}/logs/
+get:
+  summary: List all logs
+  description: >-
+    List of all logs associated with a given node.
+
+    Paginated list of Logs ordered by their date.
+    This list includes the Logs of the specified Node as well as
+    the logs of that Node's children to which the current user has access.
+
+
+    ####Returns
+    Returns a JSON object containing `data` and `links` keys.
+
+
+    The `data` key contains an array of up to 10 logs.
+    Each resource in the array is a separate logs object.
+
+
+    The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
+
+    ####Filtering
+
+    You can optionally request that the response only include nodes that match your filters by utilizing the `filter` query parameter, e.g.
+    https://api.osf.io/v2/nodes/?filter[title]=reproducibility.
+
+    Nodes may be filtered by their `action`, and `date`.
+
+  parameters:
+    - in: path
+      name: node_id
+      type: string
+      required: true
+      description: 'The unique identifier of the node.'
+
+  tags:
+    - Nodes
+
+  operationId: nodes_logs_list
+  x-response-schema: Log
+  responses:
+    '200':
+      description: 'OK'
+      schema:
+        type: array
+        items:
+          $ref: '../logs/definition.yaml'
+      examples:
+        application/json:
+          data:
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              user:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+              linked_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/logs/58d288c2a170c50017124d72/
+            attributes:
+              date: '2017-03-22T14:22:58.019844'
+              action: pointer_created
+              params:
+                preprint_provider:
+                params_node:
+                  id: gaz5n
+                  title: 'Awesome Project 1'
+                pointer:
+                  url: "/6q49d/"
+                  category: project
+                  id: 6q49d
+                  title: 'Awesome Project 2'
+                params_project:
+                contributors: []
+            type: logs
+            id: 58d288c2a170c50017124d72
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              user:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/logs/58d274b3a170c5003edaa25e/
+            attributes:
+              date: '2017-03-22T12:57:23.350451'
+              action: registration_initiated
+              params:
+                preprint_provider:
+                params_node:
+                  id: gaz5n
+                  title: 'Awesome Project 1'
+                params_project:
+                contributors: []
+            type: logs
+            id: 58d274b3a170c5003edaa25e
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              user:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/logs/58d164a5a170c50025baae74/
+            attributes:
+              date: '2017-03-21T17:36:37.797687'
+              action: addon_added
+              params:
+                preprint_provider:
+                params_node:
+                  id: gaz5n
+                  title: 'Awesome Project 1'
+                params_project:
+                contributors: []
+                addon: Box
+            type: logs
+            id: 58d164a5a170c50025baae74
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              user:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/logs/58d16465a170c50025baae72/
+            attributes:
+              date: '2017-03-21T17:35:33.615228'
+              action: addon_added
+              params:
+                preprint_provider:
+                params_node:
+                  id: gaz5n
+                  title: 'Awesome Project 1'
+                params_project:
+                contributors: []
+                addon: Dropbox
+            type: logs
+            id: 58d16465a170c50025baae72
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              user:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/logs/58d037ea9190330010e8a35c/
+            attributes:
+              date: '2017-03-20T20:13:30.599144'
+              action: made_private
+              params:
+                preprint_provider:
+                params_node:
+                  id: gaz5n
+                  title: 'Awesome Project 1'
+                params_project:
+                contributors: []
+            type: logs
+            id: 58d037ea9190330010e8a35c
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              user:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/logs/58d037db9190330010e8a35a/
+            attributes:
+              date: '2017-03-20T20:13:15.653576'
+              action: made_public
+              params:
+                preprint_provider:
+                params_node:
+                  id: gaz5n
+                  title: 'Awesome Project 1'
+                params_project:
+                contributors: []
+            type: logs
+            id: 58d037db9190330010e8a35a
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              user:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/logs/58d037d0a170c50025baae5c/
+            attributes:
+              date: '2017-03-20T20:13:04.896632'
+              action: edit_description
+              params:
+                preprint_provider:
+                params_node:
+                  id: gaz5n
+                  title: 'Awesome Project 1'
+                params_project:
+                contributors: []
+            type: logs
+            id: 58d037d0a170c50025baae5c
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    meta: {}
+              user:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/users/4xpu9/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/logs/58d037a19190330010e8a356/
+            attributes:
+              date: '2017-03-20T20:12:17.002426'
+              action: project_created
+              params:
+                preprint_provider:
+                params_node:
+                  id: gaz5n
+                  title: 'Awesome Project 1'
+                params_project:
+                contributors: []
+            type: logs
+            id: 58d037a19190330010e8a356
+          links:
+            first: null
+            last: null
+            prev: null
+            next: null
+            meta: null
+              total: 8
+              per_page: 10
