--- a/swagger-spec/view_only_links/definition.yaml
+++ b/swagger-spec/view_only_links/definition.yaml
@@ -9,11 +9,11 @@ properties:
   id:
     type: string
     readOnly: true
-    description: 'The identifier of the view only link.'
+    description: 'The unique identifier of the view only link.'
   type:
     type: string
     readOnly: true
-    description: 'The type identifier of the view only link.'
+    description: "The type identifier of the view only link ('view-only-links')."
   attributes:
     type: object
     title: Attributes
@@ -24,14 +24,16 @@ properties:
         type: string
         format: date-time
         readOnly: true
-        description: 'The time at which the view only link was created'
+        description: 'The time at which the view only link was created, as an iso8601 formatted timestamp.'
       anonymous:
         type: boolean
-        readOnly: true
+        default: true
+        readOnly: false
         description: 'Whether or not the view only link has anonymized contributors'
       name:
         type: string
-        readOnly: true
+        default: 'Shared project link'
+        readOnly: false
         description: 'The name of the view only link'
       key:
         type: string
@@ -50,7 +52,7 @@ properties:
         type: string
         format: URL
         readOnly: false
-        description: 'A relationship to the nodes affiliated with this view only link.'
+        description: 'A relationship to the nodes which this view only link gives read-only access to.'
       creator:
         type: string
         readOnly: true
