--- a/swagger-spec/view_only_links/detail.yaml
+++ b/swagger-spec/view_only_links/detail.yaml
@@ -6,8 +6,8 @@ get:
 
         ####Permissions
 
-        View only links on a node, public or private, are only readable and
-        writeable by users that are administrators on the node.
+        Only project administrators may retrieve the details of a view only link.
+        Attempting to retrieve a view only link without appropriate permissions will result in a 403 Forbidden response.
 
         #### Returns
 
