--- a/swagger-spec/nodes/identifiers_list.yaml
+++ b/swagger-spec/nodes/identifiers_list.yaml
@@ -15,6 +15,13 @@ get:
 
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
 
+    ####Filtering
+
+    You can optionally request that the response only include registrations that match your filters by utilizing the `filter` query parameter, e.g.
+    https://api.osf.io/v2/institutions/cos/registrations?filter[title]=science.
+
+    Institutions may be filtered by their `category` e.g `ark`,`doi`.
+
   parameters:
 
     - in: path
@@ -36,12 +43,38 @@ get:
           $ref: '../identifiers/definition.yaml'
       examples:
         application/json:
-          data: []
+          data:
+          - relationships:
+              referent:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/73pnd/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/identifiers/57f1641db83f6901ed94b459/
+            attributes:
+              category: doi
+              value: 10.17605/OSF.IO/73PND
+            type: identifiers
+            id: 57f1641db83f6901ed94b459
+          - relationships:
+              referent:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/73pnd/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/identifiers/57f1641db83f6901ed94b45a/
+            attributes:
+              category: ark
+              value: c7605/osf.io/73pnd
+            type: identifiers
+            id: 57f1641db83f6901ed94b45a
           links:
-            first:
-            last:
-            prev:
-            next:
-            meta:
-              total: 0
+            first: null
+            last: null
+            prev: null
+            next: null
+            meta: null
+              total: 2
               per_page: 10
