--- a/swagger-spec/nodes/providers_list.yaml
+++ b/swagger-spec/nodes/providers_list.yaml
@@ -3,18 +3,21 @@
 get:
   summary: List all storage providers
   description: >-
-    List of storage providers enabled for this node.
+    List of all storage providers enabled for this node.
 
     ####Returns
 
     Returns a JSON object containing `data` and `links` keys.
 
+
     The `data` key contains an array of files.
-    Each resource in the array is a separate file object and contains the full representation of the file, meaning additional requests to a file's detail view are not necessary.
+    Each resource in the array is a separate file object.
+
 
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
 
-    In the OSF filesystem model, providers are treated as folders, but with special properties that distinguish
+
+    Note: In the OSF filesystem model, providers are treated as folders, but with special properties that distinguish
     them from regular folders. Every provider folder is considered a root folder, and may not be deleted through the regular file API.
 
   parameters:
@@ -58,10 +61,10 @@ get:
             type: files
             id: ezcuj:osfstorage
           links:
-            first: null
-            last: null
-            prev: null
-            next: null
-            meta: null
+            first:
+            last:
+            prev:
+            next:
+            meta:
               total: 1
               per_page: 10
