--- a/swagger-spec/nodes/comments_list.yaml
+++ b/swagger-spec/nodes/comments_list.yaml
@@ -341,3 +341,52 @@ get:
             meta:
             total: 6
             per_page: 10
+post:
+  summary: Create a comment
+  description: >-
+    Create a comment on a given node overview page or a reply to a comment on that node.
+
+    To create a comment on the node overview page, the target `type` would be "nodes" and the target `id` would be the node `id`.
+    To reply to a comment on this node, the target `type` would be "comments" and the target `id` would be the `id` of the comment to reply to.
+
+    ####Permissions
+
+    Only project contributors can create comments on a node.
+
+    ####Required
+
+    A relationship object with a `data` key, containing the target (`comments` or `nodes`) type and a target `id` is required.
+
+    In addition, the `content` attribute describing the relationship between the node and the comment is required.
+
+    ####Returns
+
+    Returns a JSON object with a data key containing the representation of the new comment, if the request is successful.
+
+
+    If the request is unsuccessful, an `errors` key containing information about the failure will be returned.
+    Refer to the [list of error codes](#Introduction_error_codes) to understand why this request may have failed.
+
+
+
+  parameters:
+    - in: path
+      type: string
+      required: true
+      name: node_id
+      description: 'The unique identifier of the node you want to comment on.'
+
+    - in: body
+      name: body
+      required: true
+      schema:
+        $ref: '../comments/definition.yaml'
+  tags:
+    - Nodes
+  operationId: nodes_comment_create
+  x-response-schema: Comment
+  consumes:
+    - application/json
+  responses:
+    '201':
+      description: 'Success'
